# hanoi

./: .gitignore  package.json
src/: App.jsx  Hanoi.jsx  LabeledNumberInput.jsx  LabeledStringInput.jsx  Permutation.jsx  state.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  permutation.rs  state.rs
src-tauri/src/hanoi/: impls.rs  mod.rs  sturcts.rs  traits.rs
